dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbservice             
  namespace: prod-namespace
spec:
  clusterIP: None              
  selector:
    app: javaapp-database      
  ports:
    - port: 3306
      targetPort: 3306
