service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaapp-service
  namespace: prod-namespace
spec:
  type: ClusterIP
  selector:
    app: javaapp
  ports:
  - port: 1101
    targetPort: 8080
