networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: javaapp-allow-ingress
  namespace: prod-namespace

spec:
  podSelector:
    matchLabels:
      app: javaapp

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: javaapp-database 
      ports:
        - protocol: TCP
          port: 3306

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP              
          port: 53
